syntax = "proto3";
package utxoserialization;

option go_package = "github.com/kaspanet/kaspad/domain/consensus/utils/utxoserialization";

message ProtoUTXO {
  bytes entryOutpointPair = 1;
}

message ProtoUTXOSet {
  repeated ProtoUTXO utxos = 1;
}